# ready-4-prod-fastapi-app

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: ac1603d49397_first_migration.py
src/: config.py  main.py
src/graphql_app/: __init__.py  helpers.py  miscellanious.py  mutations.py  queries.py  resolvers.py  types.py
src/sql_app/: __init__.py  models.py  session_manager.py
